external-crates/move/crates/move-compiler/tests/development/enums/parser/pattern_ellipsis_invalid.exp
error[E01002]: unexpected token
   ┌─ tests/development/enums/parser/pattern_ellipsis_invalid.move:10:13
   │
10 │             ..
   │             ^^ Invalid pattern

